--- a/Nikits/index.html
+++ b/Nikits/index.html
@@ -81,7 +81,7 @@
                     <li class="textDescription">Follow the purchase instructions.</li>
                 </ul>
                 <div class="button_parent">
-                    <button class="buyBTC">Buy BTC</button>
+                    <div class="buyBTC">Buy BTC</div>
                 </div>
             </div>
 
