--- a/Nikits/index.html
+++ b/Nikits/index.html
@@ -69,7 +69,7 @@
                     <li class="textDescription">Follow the purchase instructions.</li>
                 </ul>
                 <div class="button_parent">
-                        <button class="buyBTC">Buy BTC</button>
+                        <div class="buyBTC">Buy BTC</div>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                     <li class="textDescription">Follow the purchase instructions.</li>
                 </ul>
                 <div class="button_parent">
-                    <button class="buyBTC"> Buy BTC</button>
+                    <div class="buyBTC"> Buy BTC</div>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                     <li class="textDescription">Follow the purchase instructions.</li>
                 </ul>
                 <div class="button_parent">
-                    <button class="buyBTC"> Buy BTC</button>
+                    <div class="buyBTC"> Buy BTC</div>
                 </div>
             </div>
 
